--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,87 @@
-version: '3.8'
-
 services:
+  # MongoDB Database
   mongodb:
     image: mongo:7
     container_name: menescape-mongodb
     restart: unless-stopped
-    ports:
-      - "27017:27017"
     volumes:
       - mongodb_data:/data/db
     environment:
       - MONGO_INITDB_DATABASE=menescape
+    networks:
+      - menescape-network
+    healthcheck:
+      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # NestJS Backend API
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: menescape-backend
+    restart: unless-stopped
+    ports:
+      - "${BACKEND_PORT:-3001}:3001"
+    environment:
+      - NODE_ENV=production
+      - MONGODB_URI=mongodb://mongodb:27017/menescape
+      - JWT_SECRET=${JWT_SECRET:-menescape-jwt-secret-key-2024}
+      - ADMIN_USERNAME=${ADMIN_USERNAME:-admin}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-menescape}
+      - PORT=3001
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID:-}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET:-}
+    volumes:
+      - uploads_data:/app/uploads
+    networks:
+      - menescape-network
+    depends_on:
+      mongodb:
+        condition: service_healthy
+
+  # Next.js Frontend
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+      args:
+        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:3001/api}
+    container_name: menescape-frontend
+    restart: unless-stopped
+    ports:
+      - "${FRONTEND_PORT:-3000}:3000"
+    environment:
+      - NODE_ENV=production
+    networks:
+      - menescape-network
+    depends_on:
+      - backend
+  # Nginx Reverse Proxy (Optional - uncomment to use)
+  # nginx:
+  #   image: nginx:alpine
+  #   container_name: menescape-nginx
+  #   restart: unless-stopped
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf:ro
+  #     - ./ssl:/etc/nginx/ssl:ro  # For SSL certificates
+  #   networks:
+  #     - menescape-network
+  #   depends_on:
+  #     - frontend
+  #     - backend
+
+networks:
+  menescape-network:
+    driver: bridge
 
 volumes:
   mongodb_data:
+    driver: local
+  uploads_data:
     driver: local
