--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ BACKEND_PORT=3001
 # API URL (Used by frontend to connect to backend)
 # Update this to your server's domain or IP address
 # =============================================================================
-NEXT_PUBLIC_API_URL=http://188.245.101.17:3001/api
+NEXT_PUBLIC_API_URL=http://api.sugamuga.com/api
 
 # =============================================================================
 # SECURITY
